# n8n-workflow-builder

./: .env.example  .flake8  .gitignore  AGENTS.md  Makefile  README.md  WORKFLOW_REPO_TEMPLATE.md  config.example.yaml  pyproject.toml
src/n8n_builder/: __init__.py  cli.py
src/n8n_builder/models/: config.py
src/n8n_builder/services/: builder.py  comparator.py  n8n_client.py  secrets.py
src/n8n_builder/utils/: validation.py
templates/: data-sync.yaml  scrape-business-emails.json
tests/: test_config.py
workflows/: user-onboarding.json
